--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=BA World Scouter
 author=Foster
-description=Helps scout for optimal worlds for quick-starting in Barbarian Assault
+description=Helps scout for worlds with good quick-start conditions in Barbarian Assault
 tags=barbarian,assault,scout,ba,world
 plugins=rsfost.ba_world_scouter.BaWorldScouterPlugin
